# gtfo

./: Brouwer.nb  CMakeLists.txt  EdgeDisjointSpanningTrees.nb  Extendable.nb  Hamming.nb  Hypergraph.nb  SignedSpectrum.nb  SteinerTripleSystems.nb  distance_regular.txt  extendable.cpp  hamming.cpp  main.cpp  sts13.txt
